fixed whitespace in project 1 example2

--- a/3 Projects/MovieApp/example2/style.css
+++ b/3 Projects/MovieApp/example2/style.css
@@ -7,8 +7,13 @@
     position: absolute;
     background: linear-gradient(rgba(1,1,1,0.5), rgba(1,1,1,0.5)), url("./assets/unyhhhqask6ey6g7wo5x.webp") no-repeat center center fixed;
     background-size: cover;
+
+    
+    overflow-x: hidden;
 }
 
+
+/* Overflo-x: hidden fixed and removed all the whitespace under the background image */
 
 h1,h2,p{
     color: white;
